<resources>
    <string name="app_name">Relative Layout</string>
    <string name="username_label">Username</string>
    <string name="username_hint">Enter your username</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="login_label">Log in</string>
    <string name="checkbox_label">Remember Me</string>

</resources>