<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/usernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/username_label"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:hint="@string/username_hint"
        android:layout_below="@id/usernameLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/password_label"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:hint="@string/password_hint"
        android:layout_below="@id/passwordLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordInput"
        android:layout_centerHorizontal="true"
        android:text="@string/login_label"
        android:textSize="18sp"
        android:padding="8dp"/>

    <CheckBox
        android:id="@+id/rememberMeCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/checkbox_label"
        android:textSize="18sp"
        android:padding="8dp"/>

</RelativeLayout>